# i-really-hate-macos

./: .clang-format  .gitignore  CMakeLists.txt  Info-iphone.plist  Info.plist  azure-pipelines.yml  camera.mm  interface.h  main-iphone.mm  main.mm  metal.mm  native.cpp  native_test.mm  opengl.mm  opengl_es.cpp  opengl_es.h  pch.h  readme.md
azure/: steps-mac.yml
